# tag-space-tools

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  readme.md  setup.py
lib/tag_space_tools/: __init__.py  __main__.py
lib/tag_space_tools/core/: __init__.py  file_searcher.py  file_sorter.py  find_duplicates.py  fix_tagspace.py  sort_files.py  tag_file_mapper.py  tag_finder.py  tag_search.py  tag_space_entry.py
lib/tag_space_tools/gui/: __main__.py  dialog.py  exceptions.py  fix_dialog.py  fix_missing_tag_widget.py  settings.py  statistics.py  tag_rename.py  tag_sorter.py  tag_sorter_widget.py  tagspace_tab_widget.py  text_handler.py
lib/tag_space_tools/ui/: duplicate_widget_ui.py  fix_widget.ui  fix_widget_ui.py  resources_rc.py  statistic_widget_ui.py  tag_rename_ui.py  ui_dialog.py  ui_duplicate_widget.py  ui_fix_widget.py  ui_statistic_widget.py  ui_tag_rename.py  ui_tag_sorter.py
lib/tagspace_move/: __main__.py  fix_tagspace.py  tag_space_entry.py
src/: resources.qrc
src/manager/actions/: tag_space_fix.py
src/tag_space_tools/: __init__.py
src/tag_space_tools/core/: file_searcher.py  file_sorter.py  find_duplicates.py  tag_finder.py  tag_space_entry.py
src/tag_space_tools/gui/: __main__.py  settings.py  statistics.py  tag_rename.py  tagspace_tab_widget.py
src/tag_space_tools/ui/: duplicate_widget_ui.py  fix_widget.ui  statistic_widget_ui.py  tag_rename_ui.py  tag_sorter_ui.py
src/ui/: dialog.ui  duplicate_widget.ui  fix_widget.ui  statistic_widget.ui  tag_rename.ui  tag_sorter.ui
(+16 files in other folders)
